version 2023c, in progress
- String-valued series: support returning such series from a
  user function, and loosen the restrictions on assignment to
  such series
- Fix bug dating from 2022c: broken handling of the syntax
  listname.series when used in a function that is called from
  within a loop
- Fix bug: possibly incomplete results when compacting daily
  data to weekly
- Fix bug: wrong alignment when appending dated weekly data
- Fix bug: possible duplicate entries in GUI function package
  listing
- GUI: use "Apply" and "OK" buttons more consistently

2023-07-21 version 2023b
- New command "kdplot": simple access to a kernel density plot
  for a single series
- New function typename(): return a string giving the type of
  the argument (can replace typeof() and typestr())
- "arima" command: implement built-in procedure for assessing
  lag orders, via new --lagselect option, and add GUI access
- "corr" command: add 1 percent critical value of correlation
  coefficient to the output
- "join" command: import descriptions of newly-added series,
  if present
- "gnuplot" command: add new options --inbuf and --outbuf to
  accept, respectively, input from a named string and output
  to a named string
- "smpl" command with the panel-data --time option: support
  the --replace modifier
- "outfile" command: insist on correct syntax for usage with
  the --tempfile option
- aggregate() function: support matrix input
- misszero() and zeromiss() functions: support matrix input
- SVAR addon: implement mixed (set-based and zero) restrictions
- geoplot addon: make the plot key position configurable
- regls addon: add an mregls() function for working with data
  in matrix form
- Add optional boolean "skip_na" argument for several matrix
  functions that compute statistics
- Functions bkfilt, bwfilt, fracdiff, filter: disallow panel
  data since these functions assume regular time-series data
- Boxplots: respect the chosen gnuplot theme, if applicable